# config

./: .gdbinit  .git-branches.toml  .gitconfig  .gitignore  .tmux.conf  .vimrc  .yaourtrc  .zlogin  .zlogout  .zprofile  .zshaliases  .zshenv  .zshfunctions  .zshinputrc  .zshrc  Cargo.toml  Justfile  install  lontra.toml  setup  setup.bat  steamdeck-bootstrap
bootstrap/: Cargo.toml
bootstrap/src/: cli.rs  dir_layout.rs  git_utils.rs  lib.rs  logconfig.rs  main.rs  process_utils.rs
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: cli.rs  lib.rs  main.rs  process_utils.rs
crates/lontra/: Cargo.toml
crates/lontra-cli/: Cargo.toml
crates/lontra-cli/src/: cli.rs  lib.rs  logconfig.rs
crates/lontra-process/: Cargo.toml
crates/lontra-process/src/: command.rs  env.rs  lib.rs  process_utils.rs  shlexfmt.rs
crates/lontra-registry/: .gitignore  Cargo.toml  diesel.toml
crates/lontra-registry/.sqlx/: query-0bd68d43ebee1f717c52d70eb4c57eae2c5f0f536a419df4540fb3420be9cf6b.json  query-1f1776b6696bb4b7556cb2e92c52e0a6617607a0bd3fa613d9c1886732a6e5e1.json  query-275ef73de5f42e950b885fb3fa21918bbdc4759012d1c45246d2c48db5b82927.json  query-497bbc21754934cc2ad6c77393df79670f419af4dffe3ad282f1cc9f10d822ec.json  query-570da1bdca258c2b63d1258869390e2ca669e04e1e8f68b62c7afa215cbe7958.json  query-9d919fc75a425e4d6a8574b8ec69eeae7fa7b3fd0b1e35ba2b2d192129a593d9.json  query-9f59cdd8db7ed16d756acf55d9237051fafbd074a00075b5f6f35f251a5974e4.json  query-a7289062adde3c0661255861c470290f314bdbfecd9439537d21641dc6c743e3.json  query-a9127f7300d926cf47b727431abad44c8b1fd5dc3f3f29e874ef21ad1c3b24b9.json  query-ae39a91170e4affbf3d1c48f8d50abf563e2e440fd875db49e49d823e4525c9c.json  query-c4eec1b4fe91dd75d4fd4f8f9c29349c34180a5ca99f7af49f164e3fac70aab5.json  query-c87e6ea299e9f8d1980285d2bfefbaf23ebf797115e9b9ea14901cb20812c9b8.json  query-ce76a727028a0601bb049c0bc23c385cb92c9a9e2aa41384670dc8e0ee1f670f.json
crates/lontra-registry/migrations/: 20250609163830_updates.sql  20250622215347_config.sql
crates/lontra-registry/migrations/2025-06-01-230230_files/: up.sql
crates/lontra-registry/src/: connection.rs  file_type.rs  lib.rs  migrations.rs  model.rs  proxied.rs  queries.rs  row_queries.rs  runtime.rs  schema.rs  sqlite.rs
crates/lontra-sig/: Cargo.toml
crates/lontra-sig/src/: allowed_keys.rs  asserts.rs  lib.rs  ssh_sig.rs
crates/lontra-sig/testdata/: Makefile  trusted-a@lontra.sig  trusted-b@lontra.sig  trusted@bad.sig  trusted_b_id_ed25519  trusted_b_id_ed25519.pub  trusted_id_ed25519  trusted_id_ed25519.pub  untrusted@lontra.sig  untrusted_id_ed25519  untrusted_id_ed25519.pub
crates/lontra-tags/: Cargo.toml
crates/lontra-tags/src/: lib.rs  tag_util.rs
crates/lontra-tags/src/sys/: mod.rs  unix.rs  windows.rs
crates/lontra-xtask/: Cargo.toml
crates/lontra-xtask/src/: dependencies.rs  install.rs  lib.rs  main.rs  pre_commit.rs  sqlx.rs  workspace.rs
crates/lontra/src/: command.rs  layout.rs  lib.rs  main.rs  module.rs  string_list.rs  tag_criteria.rs  uninstaller.rs
crates/lontra/src/jinja/: context.rs  glob.rs  header.rs  helpers.rs  mod.rs
crates/lontra/src/package/: command_output.rs  mod.rs  satisficer.rs  system.rs  user.rs
crates/lontra/src/package/contents/: args.rs  ast.rs  cat_glob.rs  copy.rs  dirs_prefix.rs  exec.rs  fetch.rs  file_util.rs  git_clone.rs  importer.rs  is_command.rs  is_os.rs  lexer.rs  local_state.rs  mkdir.rs  net_util.rs  once.rs  parser.rs  remote_source.rs  render.rs  set_contents.rs  symlink.rs  symlink_tree.rs  tags.rs
crates/lontra/src/repository/: mod.rs
crates/pikaconfig/: Cargo.toml
crates/pikaconfig/src/: annotated_path.rs  command.rs  empty_struct.rs  file_util.rs  layout.rs  lib.rs  main.rs  module.rs  quote.rs  string_list.rs  symlink_util.rs  tag_criteria.rs  tag_util.rs  tera_helper.rs  tera_helpers.rs  uninstaller.rs  xdg.rs  xdg_or_win.rs
crates/pikaconfig/src/jinja/: context.rs  glob.rs  helpers.rs  mod.rs
crates/pikaconfig/src/package/: config.rs  installer.rs  mod.rs  satisficer.rs  system.rs  user.rs
crates/pikaconfig/src/package/contents/: args.rs  ast.rs  ast_parser.lalrpop  cat_glob.rs  copy.rs  deprecated.rs  dirs_prefix.rs  engine.rs  exec.rs  (+26 more)
crates/pikaconfig/src/registry/: migrations.rs  model.rs  queries.rs
crates/pikaconfig/src/repository/: config.rs  mod.rs
crates/pikaconfig/src/unarchiver/: inventory.rs  mod.rs  unzip.rs
crates/process_utils/: Cargo.toml
crates/process_utils/src/: cmd.rs  command.rs  env.rs  flag.rs  lib.rs  process_utils.rs  shell.rs
crates/registry/: Cargo.toml
crates/registry/src/: connection.rs  file_type.rs  lib.rs  migrations.rs  model.rs  queries.rs  row_queries.rs  sqlite.rs
pikaconfig/: Cargo.toml  __init__.py  build.rs  configuration.py  database.py  entry.py  file_entry.py  importer.py  local_state.py  logconfig.py  pikaconfig-manifest.rc  post_install_hook.py  system.py  system_entry.py  tagutil.py  util.py  xdg.py
pikaconfig/src/: annotated_path.rs  command.rs  file_registry.rs  file_util.rs  git_utils.rs  iter_util.rs  layout.rs  main.rs  module.rs  os_str.rs  quote.rs  registry.rs  shlexfmt.rs  sqlite_registry.rs  string_list.rs  tag_criteria.rs  tag_util.rs  tera_helpers.rs  uninstaller.rs  xdg.rs
pikaconfig/src/package/: ansible.rs  config.rs  installer.rs  mod.rs  satisficer.rs  system.rs  user.rs
pikaconfig/src/package/contents/: args.rs  ast.rs  ast_parser.lalrpop  cat_glob.rs  copy.rs  deprecated.rs  dirs_prefix.rs  engine.rs  exec.rs  fetch.rs  file_tests.rs  file_util.rs  git_clone.rs  if_command.rs  if_missing.rs  if_os.rs  importer.rs  inventory.rs  is_command.rs  is_missing.rs  is_os.rs  lexer.rs  literal.rs  local_state.rs  mkdir.rs  mod.rs  net_util.rs  once.rs  output_file.rs  parser.rs  prefix.rs  remote_source.rs  render.rs  set_contents.rs  subdir.rs  symlink.rs  symlink_tree.rs  tags.rs  util.rs  which.rs
pikaconfig/src/registry/: file_type.rs  migrations.rs  mod.rs  model.rs  queries.rs  row_queries.rs  sqlite.rs
pikaconfig/src/repository/: config.rs  mod.rs
pikaconfig/src/unarchiver/: inventory.rs  mod.rs  unzip.rs
(+687 files in other folders)
