[workspace]
resolver = "2"
members = ["crates/*"]

# https://doc.rust-lang.org/cargo/reference/workspaces.html#the-package-table
[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
anyhow = "1.0"
dirs = "6.0"
either = "1.13.0"
log = "0.4"
pretty_assertions = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
test-case = "3.3.1"
thiserror = "2.0"

# https://rust-lang.github.io/rust-clippy/stable/index.html
[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
doc_markdown = "allow"
explicit_into_iter_loop = "allow" # TODO: enable
explicit_iter_loop = "allow" # TODO: enable
ignored_unit_patterns = "allow"
inconsistent_struct_constructor = "allow" # TODO: enable
map_unwrap_or = "allow" # TODO: enable
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow" # TODO: re-evaluate
needless_raw_string_hashes = "allow"
option_option = "allow" # TODO: re-evaluate
redundant_closure_for_method_calls = "allow" # TODO: enable
return_self_not_must_use = "allow"
semicolon_if_nothing_returned = "allow" # TODO: enable
struct_excessive_bools = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow" # TODO: enable
unnecessary_wraps = "allow"
unreadable_literal = "allow"
unused_self = "allow"
# Restriction.
str_to_string = "deny"

# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
[workspace.lints.rust]
ambiguous_negative_literals = "deny"
closure-returning-async-block = "deny"
let_underscore_drop = "deny"
redundant_lifetimes = "deny"
unreachable_pub = "deny"
unused_qualifications = "deny"
