[workspace]
resolver = "2"
members = ["crates/*"]

# https://doc.rust-lang.org/cargo/reference/workspaces.html#the-package-table
[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
anyhow = "1.0"
dirs = "6.0"
either = "1.13.0"
log = "0.4"
pretty_assertions = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
test-case = "3.3.1"
thiserror = "2.0"

# https://rust-lang.github.io/rust-clippy/stable/index.html
[workspace.lints.clippy]
# Nursery.
cognitive_complexity = "deny"
suspicious_operation_groupings = "deny"
trait_duplication_in_bounds = "deny"
use_self = "deny"
useless_let_if_seq = "deny"
# Pedantic.
pedantic = { level = "deny", priority = -1 }
doc_markdown = "allow"
ignored_unit_patterns = "allow"
map_unwrap_or = "allow" # TODO: enable
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_raw_string_hashes = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
unnecessary_wraps = "allow"
unreadable_literal = "allow"
unused_self = "allow"
# Restriction.
empty_structs_with_brackets = "deny"
pub_without_shorthand = "deny"
shadow_unrelated = "deny"
str_to_string = "deny"
string_to_string = "deny"
tests_outside_test_module = "deny"
try_err = "deny"
unneeded_field_pattern = "deny"
unused_trait_names = "deny"

# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
[workspace.lints.rust]
ambiguous_negative_literals = "deny"
closure-returning-async-block = "deny"
let_underscore_drop = "deny"
redundant_lifetimes = "deny"
unreachable_pub = "deny"
unused_qualifications = "deny"
