[package]
name = "pikaconfig-bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
log = "0.4"
shlex = "1.1.0"

[dependencies.env_logger]
version = "0.10.0"
default-features = false
features = ["auto-color"]

[dev-dependencies]
pretty_assertions = "1.4.0"
