[package]
name = "pikaconfig"
version = "0.1.0"
edition = "2021"
build = "build.rs"
rust-version = "1.71.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.21.0"
clap = { version = "4.2", features = ["derive"] }
dirs = "5.0"
glob = "0.3.1"
indoc = "2.0.1"
log = "0.4"
logos = "0.13.0"
once_cell = "1.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.97"
serde_yaml = "0.9.21"
sha2 = "0.10.6"
shellexpand = { version = "3.1", features = ["path"] }
shlex = "1.1.0"
sysinfo = { version = "0.28.4", default-features = false }
tera = { version = "1.19.0", default-features = false }
thiserror = "1.0"
toml = "0.7.3"
ureq = "2.6.2"
url = "2.4.0"
walkdir = "2"
which = "4.4.0"

[dependencies.env_logger]
version = "0.10.0"
default-features = false
features = ["auto-color"]

# https://lalrpop.github.io/lalrpop/quick_start_guide.html
# See also build.rs.
[dependencies.lalrpop-util]
version = "0.20.0"
default-features = false
features = ["lexer", "unicode"]
[build-dependencies.lalrpop]
version = "0.20.0"
default-features = false
features = ["lexer", "unicode"]

[dev-dependencies]
pretty_assertions = "1.4.0"
