[package]
name = "pikaconfig"
version = "0.1.0"
edition = "2021"
build = "build.rs"
rust-version = "1.82.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.22.0"
dirs = "5.0"
glob = "0.3.1"
indoc = "2.0.1"
libc = "0.2.147"
log = "0.4"
logos = "0.15.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
rusqlite_migration = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.97"
sha2 = "0.10.6"
shellexpand = { version = "3.1", features = ["path"] }
tera = { version = "1.19.0", default-features = false }
thiserror = "2.0"
toml = "0.8.10"
ureq = "2.6.2"
url = "2.4.0"
walkdir = "2"
which = "7.0.0"

[dependencies.pikaconfig-bootstrap]
path = "../bootstrap"

# https://lalrpop.github.io/lalrpop/quick_start_guide.html
# See also build.rs.
[dependencies.lalrpop-util]
version = "0.22.0"
default-features = false
features = ["lexer", "unicode"]
[build-dependencies.lalrpop]
version = "0.22.0"
default-features = false
features = ["lexer", "unicode"]

[dependencies.sysinfo]
version = "0.33.0"
default-features = false
features = ["system"]

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest_reuse = "0.7.0"
rstest = { version = "0.23.0", default-features = false }
