[package]
name = "pikaconfig-bootstrap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
cli = { path = "../cli" }
log = "0.4"
shlexfmt = { path = "../shlexfmt" }

[dependencies.env_logger]
version = "0.11.3"
default-features = false
features = ["auto-color"]

[dev-dependencies]
pretty_assertions = "1.4.0"
