[package]
name = "lontra-bootstrap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
cli = { package = "lontra-cli", path = "../lontra-cli" }
dir_layout = { path = "../dir_layout" }
log.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
