[package]
name = "lontra-bootstrap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
cli = { package = "lontra-cli", path = "../lontra-cli" }
log.workspace = true
lontra-layout = { path = "../lontra-layout" }

[dev-dependencies]
pretty_assertions.workspace = true
