[package]
name = "lontra-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.2", features = ["derive"] }
log.workspace = true

[dependencies.env_logger]
version = "0.11.3"
default-features = false
features = ["auto-color"]
