[package]
name = "lontra-process"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
either.workspace = true
log.workspace = true
shlex = "1.1.0"

[dev-dependencies]
pretty_assertions.workspace = true
test-case.workspace = true
