[package]
name = "lontra-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
lontra-strings = { path = "../lontra-strings" }
rusqlite = { version = "0.35.0", features = ["bundled"] }
rusqlite_migration = "2.1.0"

[dependencies.diesel]
version = "2.2.10"
features = [
    "returning_clauses_for_sqlite_3_35",
    "sqlite",
]
[dependencies.diesel_migrations]
version = "2.2.0"
features = ["sqlite"]
[dependencies.libsqlite3-sys]
version = "0.33.0"
default-features = false
features = ["bundled"]

[dev-dependencies]
pretty_assertions.workspace = true
test-case.workspace = true
