[package]
name = "lontra-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
lontra-strings = { path = "../lontra-strings" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
rusqlite_migration = "1.3.1"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "derive",
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
]
[dependencies.libsqlite3-sys]
version = "0.30.1"
default-features = false
features = ["bundled"]

[dependencies.tokio]
version = "1.39.3"
default-features = false
features = ["macros", "rt"]

[dev-dependencies]
pretty_assertions.workspace = true
test-case.workspace = true
