[package]
name = "lontra-tags"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
cfg-if.workspace = true
libc = "0.2.147"

[dependencies.sysinfo]
version = "0.34.2"
default-features = false
features = ["system"]
