[package]
name = "lontra-xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
cli = { package = "lontra-cli", path = "../lontra-cli" }
itertools = "0.14.0"
log.workspace = true
xshell = "0.2.7"

[dev-dependencies]
pretty_assertions.workspace = true

[[bin]]
name = "pre-commit-shim"
path = "src/bin/pre-commit-shim.rs"
