[package]
name = "lontra"
build = "build.rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
base64 = "0.22.0"
cli = { package = "lontra-cli", path = "../lontra-cli" }
dirs = "6.0"
git = { package = "lontra-git", path = "../lontra-git" }
http = "1.3.1"
indoc = "2.0.1"
log.workspace = true
logos = "0.15.0"
lontra-fs = { path = "../lontra-fs" }
lontra-glob = { path = "../lontra-glob" }
lontra-layout = { path = "../lontra-layout" }
lontra-process = { path = "../lontra-process" }
lontra-registry = { path = "../lontra-registry" }
lontra-strings = { path = "../lontra-strings" }
lontra-tags = { path = "../lontra-tags" }
lontra-unarchiver = { path = "../lontra-unarchiver" }
lontra-xdg = { path = "../lontra-xdg" }
serde.workspace = true
sha2 = "0.10.6"
shellexpand = { version = "3.1", features = ["path"] }
thiserror.workspace = true
toml = "0.9.5"
ureq = "3.0.0"
walkdir = "2"
which = "8.0.0"

# https://lalrpop.github.io/lalrpop/quick_start_guide.html
# See also build.rs.
[dependencies.lalrpop-util]
version = "0.22.0"
default-features = false
features = ["lexer", "unicode"]
[build-dependencies.lalrpop]
version = "0.22.0"
default-features = false
features = ["lexer", "unicode"]

[dependencies.minijinja]
version = "2.8.0"
default-features = false
features = ["builtins", "loader", "serde"]

[dev-dependencies]
pretty_assertions.workspace = true
test-case.workspace = true
