[package]
name = "pikaconfig"
build = "build.rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
base64 = "0.22.0"
cli = { path = "../cli" }
dir_layout = { path = "../dir_layout" }
dirs = "6.0"
git_utils = { path = "../git_utils" }
glob = "0.3.1"
indoc = "2.0.1"
log.workspace = true
logos = "0.15.0"
process_utils = { path = "../process_utils" }
quote = { path = "../quote" }
registry = { path = "../registry" }
serde.workspace = true
serde_json = "1.0.97"
sha2 = "0.10.6"
shellexpand = { version = "3.1", features = ["path"] }
shlexfmt = { path = "../shlexfmt" }
tag_util = { path = "../tag_util" }
tera = { version = "1.19.0", default-features = false }
thiserror.workspace = true
toml = "0.8.10"
unarchiver = { path = "../unarchiver" }
ureq = "3.0.0"
url = "2.4.0"
walkdir = "2"
which = "7.0.0"
xdg = { path = "../xdg" }

# https://lalrpop.github.io/lalrpop/quick_start_guide.html
# See also build.rs.
[dependencies.lalrpop-util]
version = "0.22.0"
default-features = false
features = ["lexer", "unicode"]
[build-dependencies.lalrpop]
version = "0.22.0"
default-features = false
features = ["lexer", "unicode"]

[dependencies.minijinja]
version = "2.8.0"
default-features = false

[dev-dependencies]
pretty_assertions = "1.4.0"
test-case = { version = "3.3.1" }
