[package]
name = "process_utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
either.workspace = true
log.workspace = true
shlexfmt = { path = "../shlexfmt" }

[dev-dependencies]
pretty_assertions.workspace = true
test-case.workspace = true
