[package]
name = "registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
os_str = { path = "../os_str" }
rusqlite = { version = "0.32.0", features = ["bundled"] }
rusqlite_migration = "1.3.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
test-case = "3.3.1"
