[package]
name = "registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
os_str = { path = "../os_str" }
rusqlite = { version = "0.34.0", features = ["bundled"] }
rusqlite_migration = "2.0.0"

[dev-dependencies]
pretty_assertions.workspace = true
test-case.workspace = true
